crates/ddlog-syntax/tests/parse/pass/negation_has_higher_binding_power_than_infix.rast
ROOT@0..60
  COMMENT@0..50 "// kind:expr validate ..."
  WHITESPACE@50..51 "\n"
  UNARY_EXPR@51..60
    UNARY_OP@51..52
      MINUS@51..52 "-"
    BIN_EXPR@52..60
      NUMBER_LITERAL@52..54
        NUMBER_LITERAL@52..54 "20"
      WHITESPACE@54..55 " "
      BIN_OP@55..56
        PLUS@55..56 "+"
      WHITESPACE@56..57 " "
      NUMBER_LITERAL@57..59
        NUMBER_LITERAL@57..59 "20"
      WHITESPACE@59..60 "\n"
