crates/ddlog-syntax/tests/parse/fail/unclosed_block.rast
ROOT@0..60
  COMMENT@0..51 "// kind:expr validate ..."
  WHITESPACE@51..52 "\n"
  BLOCK@52..60
    L_CURLY@52..53 "{"
    BLOCK@53..59
      L_CURLY@53..54 "{"
      WHITESPACE@54..55 " "
      NUMBER_LITERAL@55..57
        NUMBER_LITERAL@55..57 "10"
      WHITESPACE@57..58 " "
      R_CURLY@58..59 "}"
    WHITESPACE@59..60 "\n"
--
Error: expected '}' but instead the file ends
   ,-[parse/fail/unclosed_block.dl:2:9]
   |
 2 | {{ 10 }
   :         | 
   :         `- the file ends here
---'
--
// kind:expr validate:false pass:false ignore:false
{{ 10 }
